fix: hide body scrollbar

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 
 body {
     background: #F5F5EB;
+    overflow: hidden;
 }
 
 main {
